--- a/third/src/app/games/[id]/[seo_title]/page.module.css
+++ b/third/src/app/games/[id]/[seo_title]/page.module.css
@@ -15,25 +15,28 @@
 }
 
 .title {
-  font-size: 16px;
+  font-size: 32px;
   font-weight: 500;
 }
 
 .subtitle {
   display: block;
-  font-size: 10px;
-  margin: 4px 0;
+  font-size: 22px;
+  margin: 8px 0;
 }
 
 .data {
-  font-size: 12px;
+  font-size: 24px;
   font-weight: 400;
   padding: 6px 0;
 }
 
 .imgContainer {
   width: 100%;
+  min-width: 300px;
+  max-width: 400px;
+  height: 360px;
   padding: 10px;
-  object-fit: contain;
   overflow: hidden;
+  margin-right: auto;
 }
